--- a/src/index.css
+++ b/src/index.css
@@ -552,6 +552,7 @@ img {
   -webkit-line-clamp: 2;
   line-clamp: 2;
   -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 html:lang(en) .c-entity__text {
   font-size: 0.8em;
