--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,7 @@ img {
   background: var(--white);
   display: flex;
   flex-direction: column;
+  --entity-column-gap: 0.6em;
 }
 .p-holdings__inner {
   padding: 0.5em;
@@ -278,6 +279,10 @@ img {
 }
 .p-holdings__level {
   margin: 0;
+}
+.p-holdings__counts {
+  display: flex;
+  justify-content: space-between;
 }
 
 .p-holdings__entities {
