--- a/src/index.css
+++ b/src/index.css
@@ -1007,6 +1007,22 @@ html:lang(en) .p-result__type {
   align-self: center;
 }
 
+.c-character-short-name--Reimu {
+  color: var(--reimu);
+}
+.c-character-short-name--Marisa {
+  color: var(--marisa);
+}
+.c-character-short-name--Sakuya {
+  color: var(--sakuya);
+}
+.c-character-short-name--Cirno {
+  color: var(--cirno);
+}
+.c-character-short-name--Koishi {
+  color: var(--koishi);
+}
+
 :root {
   color-scheme: light dark;
   --padding-inner: 0.625em;
@@ -1039,6 +1055,12 @@ html:lang(en) .p-result__type {
   --light-orange: light-dark(#fff0d4, #271a02);
   --shadow: light-dark(#00000040, #ffffff40);
   --overlay: light-dark(#00000080, #ffffff80);
+
+  --reimu: light-dark(#ff5a5a, #9b0808);
+  --marisa: light-dark(#f2e40f, #e7d918);
+  --sakuya: light-dark(#b7f0ff, #043644);
+  --cirno: light-dark(#0f94f2, #1891e7);
+  --koishi: light-dark(#23ec4d, #1dd344);
 
   --f-white: #fff;
   --f-black: #000;
