--- a/src/index.css
+++ b/src/index.css
@@ -1097,6 +1097,10 @@ html:lang(en) .p-result__type {
   color: var(--orange);
 }
 
+.u-flex-br {
+  flex-basis: 100%;
+}
+
 @media screen and (min-width: 601px) {
   .u-sp {
     display: none;
