--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,8 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  user-select: none;
+  cursor: pointer;
 }
 .p-file {
   flex: 1;
