--- a/src/index.css
+++ b/src/index.css
@@ -380,6 +380,46 @@ img {
   padding-right: var(--padding-inner);
 }
 
+.p-summary__head {
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+}
+.p-summary__settings {
+  padding: 0.2em;
+}
+.p-summary__line {
+  display: flex;
+  gap: 0.2em 0.5em;
+}
+
+.p-mods {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  gap: 0.2em 0.5em;
+}
+.p-mod {
+  flex-basis: calc((100% - 0.5em) / 2);
+  display: grid;
+  justify-content: space-between;
+}
+.p-mod__guid {
+  font-size: 0.5em;
+}
+.p-mod > * {
+  margin: 0;
+  flex: 1 1 60%;
+}
+.p-mod__guid {
+  grid-column: 1 / span 1;
+}
+.p-mod__version {
+  grid-row: 1 / span 2;
+  grid-column: 2;
+  align-self: center;
+}
+
 .p-stations {
   margin-bottom: var(--control-height);
   flex: 1;
@@ -1089,6 +1129,13 @@ html:lang(en) .p-result__type {
   color: var(--lime);
 }
 
+.c-show-random-result {
+  color: var(--reimu);
+}
+.c-reload-times {
+  color: var(--sakuya);
+}
+
 :root {
   color-scheme: light dark;
   --padding-inner: 0.625em;
@@ -1209,6 +1256,10 @@ html:lang(en) .p-result__type {
     order: 2;
     flex-basis: 100%;
     justify-content: space-evenly;
+  }
+
+  .p-mod {
+    flex-basis: 100%;
   }
 
   .u-pc {
