--- a/src/index.css
+++ b/src/index.css
@@ -499,12 +499,12 @@ input {
   flex: 1;
 }
 .p-station {
-  padding: 1em 0;
+  padding: 0.2em 0 2em;
 }
 
 .p-station--last {
   margin-bottom: 0;
-  padding-bottom: calc(100vh - var(--map-height));
+  padding-bottom: calc(70vh - var(--map-height));
   box-sizing: border-box;
 }
 
